appId: com.singhalkarun.rangealarm
---
- launchApp:
    clearState: true
- waitForAnimationToEnd
- tapOn:
    text: "Not now"
    optional: true
- waitForAnimationToEnd
- tapOn:
    id: "fab-create"
- waitForAnimationToEnd
- tapOn:
    id: "btn-next"
- waitForAnimationToEnd
- tapOn:
    id: "btn-next"
- waitForAnimationToEnd
- tapOn:
    id: "btn-next"
- waitForAnimationToEnd
- takeScreenshot: ${SCREENSHOT_DIR}/06-create-preview
